<resources>
    <string name="app_name">Tweather</string>
    <string name="temperature_in_celsius_and_fahrenheit">Temperature in Celsius and Fahrenheit</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_speed_meter_sec">Wind speed in meter/sec</string>
    <string name="standard_deviation_of_the_temperature">Standard deviation of the temperature</string>
    <string name="calculate">Calculate</string>
    <string name="calculate_standard_deviation">Calculate Standard Deviation</string>
    <string name="cloud">Cloud</string>
    <string name="temperature_format">%1$.2f °C / %2$.2f °F</string>
    <string name="standard_deviation_format">%.8f</string>
    <string name="zero_value">0.00</string>
</resources>
